added project ownership change
missed up project ownership changing
